# gamestream

./: .gitignore  README.md
src/: CMakeLists.txt  capture.cpp  capture.hpp  decode_test.cpp  decode_test.hpp  encoder.cpp  encoder.hpp  gamestream.cpp  gstypes.hpp
src/capture/: gs_capture.cpp  gs_capture.hpp  x11_capture.cpp  x11_capture.hpp
src/sched/: gs_sched.cpp  gs_sched.hpp
